--- a/net_eval.ipynb
+++ b/net_eval.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "id": "VAcsZ7XxW7XL"
    },
@@ -20,39 +20,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "id": "a0lOP-N2mp6W"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "List of Models\n",
-      "--------------\n",
-      "0 --> unet_input512_filters32_images160_independent_patches_optAdam_lr0.0010_eps150\n",
-      "1 --> unet_input512_filters32_images160_independent_patches_optAdam_lr0.0010_eps500\n",
-      "2 --> unet_input512_filters32_images160_random_patches_optAdam_lr0.0010_eps150\n",
-      "3 --> unet_input512_filters32_images160_random_patches_optAdam_lr0.0010_eps500\n",
-      "4 --> unet_input512_filters32_images589_overlapped_patches_optAdam_lr0.0010_eps150\n",
-      "5 --> unet_input512_filters32_images589_overlapped_patches_optAdam_lr0.0010_eps500\n",
-      "6 --> unet_input512_filters32_images589_random_patches_optAdam_lr0.0010_eps150\n",
-      "7 --> unet_input512_filters32_images589_random_patches_optAdam_lr0.0010_eps500\n",
-      "\n",
-      "Choose a model from the list by typing the number of its key + Enter:\n",
-      "5\n",
-      "\n",
-      "unet_input512_filters32_images589_overlapped_patches_optAdam_lr0.0010_eps500 was selected.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Display a list with the available models and ask the user to choose which to use\n",
     "models_path = 'models/f001_w_val_data'\n",
     "models_list = [name for name in os.listdir(models_path) if os.path.isdir(os.path.join(models_path, name))]\n",
     "if 'logs' in models_list:\n",
     "    models_list.remove('logs')\n",
+    "if 'predictions' in models_list:\n",
+    "    models_list.remove('predictions')\n",
     "\n",
     "# create a dictionary with numbers as keys and the model names as values\n",
     "models2dict = dict([(str(a), b) for a, b in enumerate(models_list)])\n",
@@ -68,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "id": "2x5kHDiEGt4k"
    },
@@ -80,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "id": "bV6_F_A-I4hc"
    },
@@ -93,15 +73,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "id": "_fiLgoAGVqKp"
    },
    "outputs": [],
    "source": [
     "# Load the input and ground truth images \n",
-    "x_initial_test = plt.imread('test/301-INPUT.jpg')\n",
-    "y_initial_test = plt.imread('test/301-OUTPUT-GT.png')\n",
+    "x_initial_test = plt.imread('test/303-INPUT.jpg')\n",
+    "y_initial_test = plt.imread('test/303-OUTPUT-GT.png')\n",
+    "\n",
+    "dest_foldername = 'dataset_303'\n",
     "\n",
     "CROP_SIZE_W = 4000 \n",
     "CROP_SIZE_H = 4000\n",
@@ -112,21 +94,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "id": "SOPVSWF23qJY",
     "outputId": "fbd75ecc-84cb-4397-f327-31624905ab03"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(4000, 4000, 3)\n",
-      "(4000, 4000)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(x_initial_test.shape)\n",
     "print(y_initial_test.shape)"
@@ -185,28 +158,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "VLh5PBZBdsjc",
-    "outputId": "e7e23553-a36b-4522-84d4-0aa220b07cd9"
-   },
-   "outputs": [],
-   "source": [
-    "plot_side = int(np.sqrt(unified_predictions.shape[-1]))\n",
-    "\n",
-    "fig, ax = plt.subplots(plot_side, plot_side, dpi=300)\n",
-    "i = 0\n",
-    "for row in range(plot_side):\n",
-    "    for col in range(plot_side):\n",
-    "        ax[row, col].imshow(unified_predictions[:, :, i])\n",
-    "        ax[row, col].set_xticks([])\n",
-    "        ax[row, col].set_yticks([])\n",
-    "        i += 1\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,8 +175,33 @@
    "source": [
     "x_and_y_and_predictions = np.concatenate([x, y, unified_predictions], -1)\n",
     "\n",
+    "dest = models_path + '/predictions/' + dest_foldername\n",
+    "if not os.path.isdir(dest):\n",
+    "    os.mkdir(dest)\n",
     "name = \"prediction_\" + model_name\n",
-    "np.save(os.path.join(models_path, name), x_and_y_and_predictions)"
+    "np.save(os.path.join(dest, name), x_and_y_and_predictions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "VLh5PBZBdsjc",
+    "outputId": "e7e23553-a36b-4522-84d4-0aa220b07cd9"
+   },
+   "outputs": [],
+   "source": [
+    "plot_side = int(np.sqrt(unified_predictions.shape[-1]))\n",
+    "\n",
+    "fig, ax = plt.subplots(plot_side, plot_side, dpi=300)\n",
+    "i = 0\n",
+    "for row in range(plot_side):\n",
+    "    for col in range(plot_side):\n",
+    "        ax[row, col].imshow(unified_predictions[:, :, i])\n",
+    "        ax[row, col].set_xticks([])\n",
+    "        ax[row, col].set_yticks([])\n",
+    "        i += 1\n",
+    "plt.show()"
    ]
   },
   {
