--- a/plot_predictions.ipynb
+++ b/plot_predictions.ipynb
@@ -84,7 +84,7 @@
     "# Load the input and ground truth images \n",
     "#d1 = askdirectory()\n",
     "x = askopenfilename(initialdir='.', title='Select input image from test data')\n",
-    "y = askopenfilename(title='Select output image from test data')\n",
+    "y = askopenfilename(title='Select target image from test data')\n",
     "x_initial_test = plt.imread(x)\n",
     "y_initial_test = plt.imread(y)\n",
     "\n",
@@ -199,7 +199,7 @@
    },
    "outputs": [],
    "source": [
-    "np.save(os.path.join(models_path, 'predictions.npy'), predictions)"
+    "np.save(os.path.join(models_path, 'predictions_dict.npy'), predictions)"
    ]
   },
   {
@@ -221,7 +221,7 @@
    "outputs": [],
    "source": [
     "validation_pairs = {'x': x, 'y': y}\n",
-    "np.save(os.path.join(models_path, 'validation_pairs.npy'), validation_pairs)"
+    "np.save(os.path.join(models_path, 'validation_pairs_dict.npy'), validation_pairs)"
    ]
   },
   {
