--- a/segm_w_augm_data.ipynb
+++ b/segm_w_augm_data.ipynb
@@ -28,7 +28,7 @@
     "PARENT_PATH = 'models/f0002_w_val_data'\n",
     "# Model/training hyperparameters\n",
     "INPUT_SHAPE = (512, 512, 3)\n",
-    "CROPPING_MODE = 'overlapped_patches'  # (copy-paste a mode from: independent_patches, overlapped_patches, random_patches)\n",
+    "CROPPING_MODE = 'independent_patches'  # (copy-paste a mode from: independent_patches, overlapped_patches, random_patches)\n",
     "TRAIN_IMAGES_NUMBER = None # required only for 'random_patches' mode\n",
     "PATCHES_STEP = 256  # required only for 'overlapped_patches' mode\n",
     "INITIAL_FILTERS = 32\n",
@@ -152,10 +152,21 @@
     "x_datagen.fit(x_train, augment=True, seed=seed)\n",
     "y_datagen.fit(y_train, augment=True, seed=seed)\n",
     "\n",
-    "x_generator_train = x_datagen.flow(x_train, seed=seed, batch_size=BATCH_SIZE)\n",
-    "y_generator_train = y_datagen.flow(y_train, seed=seed, batch_size=BATCH_SIZE)\n",
+    "x_train_generator = x_datagen.flow(x_train, seed=seed, batch_size=BATCH_SIZE)\n",
+    "y_train_generator = y_datagen.flow(y_train, seed=seed, batch_size=BATCH_SIZE)\n",
     "\n",
-    "train_generator = zip(x_generator_train, y_generator_train)"
+    "train_generator = zip(x_train_generator, y_train_generator)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3fc0528b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in train_generator:\n",
+    "    print(i[1].shape)"
    ]
   },
   {
@@ -166,8 +177,16 @@
    "outputs": [],
    "source": [
     "training_images_number = x_train.shape[0]\n",
-    "steps_per_epoch = training_images_number // BATCH_SIZE\n",
-    "\n",
+    "steps_per_epoch = training_images_number // BATCH_SIZE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d623ab8d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Define the model and train\n",
     "model = unet_model(input_shape=INPUT_SHAPE, initial_filters=INITIAL_FILTERS)\n",
     "model.compile(optimizer=tf.keras.optimizers.Adam(learning_rate=LEARNING_RATE),\n",
@@ -198,7 +217,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "history = model.fit(train_generator, \n",
+    "history = model.fit(train_generator,\n",
     "                    steps_per_epoch=steps_per_epoch, \n",
     "                    epochs=EPOCHS,\n",
     "                    validation_data=(x_valid, y_valid),\n",
