--- a/net_eval.ipynb
+++ b/net_eval.ipynb
@@ -27,7 +27,7 @@
    "outputs": [],
    "source": [
     "# Display a list with the available models and ask the user to choose which to use\n",
-    "models_path = 'models/f001_w_val_data'\n",
+    "models_path = 'models/f001b'\n",
     "models_list = [name for name in os.listdir(models_path) if os.path.isdir(os.path.join(models_path, name))]\n",
     "if 'logs' in models_list:\n",
     "    models_list.remove('logs')\n",
@@ -177,39 +177,10 @@
     "\n",
     "dest = models_path + '/predictions/' + dest_foldername\n",
     "if not os.path.isdir(dest):\n",
-    "    os.mkdir(dest)\n",
+    "    os.makedirs(dest)\n",
     "name = \"prediction_\" + model_name\n",
     "np.save(os.path.join(dest, name), x_and_y_and_predictions)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "VLh5PBZBdsjc",
-    "outputId": "e7e23553-a36b-4522-84d4-0aa220b07cd9"
-   },
-   "outputs": [],
-   "source": [
-    "plot_side = int(np.sqrt(unified_predictions.shape[-1]))\n",
-    "\n",
-    "fig, ax = plt.subplots(plot_side, plot_side, dpi=300)\n",
-    "i = 0\n",
-    "for row in range(plot_side):\n",
-    "    for col in range(plot_side):\n",
-    "        ax[row, col].imshow(unified_predictions[:, :, i])\n",
-    "        ax[row, col].set_xticks([])\n",
-    "        ax[row, col].set_yticks([])\n",
-    "        i += 1\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -220,9 +191,9 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python [conda env:deepenv] *",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-env-deepenv-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -234,7 +205,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.5"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "c11aab322e2a22a0ab3f45ca9006482b0337b6102f0db376cd2f32a3f939d985"
+   }
   }
  },
  "nbformat": 4,
