--- a/plot_predictions.ipynb
+++ b/plot_predictions.ipynb
@@ -151,6 +151,8 @@
     "models_list = [name for name in os.listdir(models_path) if os.path.isdir(os.path.join(models_path, name))]\n",
     "if 'logs' in models_list:\n",
     "    models_list.remove('logs')\n",
+    "if 'predictions' in models_list:\n",
+    "    models_list.remove('predictions')\n",
     "\n",
     "bce = keras.losses.BinaryCrossentropy()\n",
     "\n",
@@ -230,6 +232,13 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -240,13 +249,10 @@
    "name": "plot_predictions.ipynb",
    "provenance": []
   },
-  "interpreter": {
-   "hash": "5afde5fb8be75fa4232c2400db5e0de612e5b75b692446a76c1449fdda253404"
-  },
   "kernelspec": {
-   "display_name": "Python [conda env:deepenv] *",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-env-deepenv-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -259,6 +265,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.12"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "5afde5fb8be75fa4232c2400db5e0de612e5b75b692446a76c1449fdda253404"
+   }
   }
  },
  "nbformat": 4,
