--- a/segm_w_augm_data.ipynb
+++ b/segm_w_augm_data.ipynb
@@ -15,6 +15,7 @@
     "from tensorflow.keras.callbacks import TensorBoard\n",
     "from keras_preprocessing.image import ImageDataGenerator\n",
     "from gm_networks import unet_model\n",
+    "import gm_first_cgan as cgan\n",
     "from utils import create_dataset_from_one_image"
    ]
   },
@@ -25,16 +26,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "PARENT_PATH = 'models/f0002_w_val_data'\n",
+    "PARENT_PATH = 'models/f001b'\n",
     "# Model/training hyperparameters\n",
     "INPUT_SHAPE = (512, 512, 3)\n",
     "CROPPING_MODE = 'independent_patches'  # (copy-paste a mode from: independent_patches, overlapped_patches, random_patches)\n",
     "TRAIN_IMAGES_NUMBER = None # required only for 'random_patches' mode\n",
-    "PATCHES_STEP = 256  # required only for 'overlapped_patches' mode\n",
+    "PATCHES_STEP = None  # required only for 'overlapped_patches' mode\n",
     "INITIAL_FILTERS = 32\n",
     "BATCH_SIZE = 8\n",
-    "EPOCHS = 500\n",
-    "LEARNING_RATE = 0.0002"
+    "EPOCHS = 150\n",
+    "LEARNING_RATE = 0.001"
    ]
   },
   {
@@ -44,10 +45,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load the initial input and output images and expand their dimensions to fit the ImageDataGenerator \n",
-    "# For inputs: initial_dimensions = (width, height, 3) ---> new_dimensions = (1, width, height, 3)\n",
-    "# For outputs: initial_dimensions = (width, height) ---> new_dimensions = (1, width, height, 1)\n",
-    "\n",
+    "# Load the initial input and output images\n",
     "x_initial_train = plt.imread('train/101-INPUT.jpg').astype('float32')[650:-550]\n",
     "y_initial_train = plt.imread('train/101-OUTPUT-GT.png')[650:-550]\n",
     "x_initial_valid = plt.imread('validation/201-INPUT.jpg').astype('float32') [500:-50]\n",
@@ -161,23 +159,85 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3fc0528b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for i in train_generator:\n",
-    "    print(i[1].shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "734dcfe5",
    "metadata": {},
    "outputs": [],
    "source": [
     "training_images_number = x_train.shape[0]\n",
-    "steps_per_epoch = training_images_number // BATCH_SIZE"
+    "steps_per_epoch = int(training_images_number / BATCH_SIZE)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3fc0528b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "discriminator = cgan.build_discriminator()\n",
+    "cgan.compile_discriminator(discriminator)\n",
+    "generator = cgan.build_generator()\n",
+    "gan = cgan.build_gan(generator, discriminator, input_shape=INPUT_SHAPE)\n",
+    "cgan.compile_gan(gan)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4289575d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if not os.path.exists(PARENT_PATH):\n",
+    "    os.makedirs(PARENT_PATH)\n",
+    "\n",
+    "model_name = f'cgan_input{INPUT_SHAPE[0]}_filters{INITIAL_FILTERS}_images{x_train.shape[0]}_{CROPPING_MODE}_optAdam_lr{\"{:0.4f}\".format(gan.optimizer.lr.value().numpy())}_eps{EPOCHS}' #TODO: loss and metric'\n",
+    "model_path = os.path.join(PARENT_PATH, model_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0c35ffb0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "im_to_predict_on_training = np.expand_dims(x_initial_train[3700:4212, 2450:2962], 0)\n",
+    "gt_to_show_on_training = y_initial_train[3700:4212, 2450:2962]\n",
+    "predicted_on_train_path = os.path.join(model_path, 'sample_predictions_while_training')\n",
+    "os.makedirs(predicted_on_train_path)\n",
+    "\n",
+    "history = cgan.train([x_train_generator, y_train_generator],\n",
+    "                     generator,\n",
+    "                     discriminator,\n",
+    "                     gan,\n",
+    "                     batch_size=BATCH_SIZE,\n",
+    "                     epochs=EPOCHS,\n",
+    "                     steps_per_epoch=steps_per_epoch,\n",
+    "                     impair_for_predictions = [im_to_predict_on_training, gt_to_show_on_training],\n",
+    "                     path_to_save_predictions = predicted_on_train_path\n",
+    "                    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c477c32a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "generator.save(model_path)\n",
+    "np.save(os.path.join(model_path, 'history'), history)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c1efe9ee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gan.save(os.path.join(model_path, 'gan'))"
    ]
   },
   {
@@ -187,7 +247,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define the model and train\n",
+    "# Define and compile the model\n",
     "model = unet_model(input_shape=INPUT_SHAPE, initial_filters=INITIAL_FILTERS)\n",
     "model.compile(optimizer=tf.keras.optimizers.Adam(learning_rate=LEARNING_RATE),\n",
     "              loss=keras.losses.BinaryCrossentropy(),\n",
