--- a/segm_w_augm_data.ipynb
+++ b/segm_w_augm_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "987abf19",
    "metadata": {},
    "outputs": [],
@@ -311,9 +311,9 @@
    "hash": "5afde5fb8be75fa4232c2400db5e0de612e5b75b692446a76c1449fdda253404"
   },
   "kernelspec": {
-   "display_name": "Python [conda env:deepenv] *",
+   "display_name": "deepenv",
    "language": "python",
-   "name": "conda-env-deepenv-py"
+   "name": "deepenv"
   },
   "language_info": {
    "codemirror_mode": {
@@ -325,7 +325,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
