--- a/net_eval.ipynb
+++ b/net_eval.ipynb
@@ -21,13 +21,25 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def normalize(input_image):\n",
+    "    input_image = input_image / 255.0\n",
+    "    input_image = tf.image.rgb_to_hsv(input_image)\n",
+    "    return input_image"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "id": "a0lOP-N2mp6W"
    },
    "outputs": [],
    "source": [
     "# Display a list with the available models and ask the user to choose which to use\n",
-    "models_path = 'models/f001b'\n",
+    "models_path = 'D:/Gerasimos/my_icdar/models/256_inputs/f0002/Unet_HSV'\n",
     "models_list = [name for name in os.listdir(models_path) if os.path.isdir(os.path.join(models_path, name))]\n",
     "if 'logs' in models_list:\n",
     "    models_list.remove('logs')\n",
@@ -68,7 +80,8 @@
    "source": [
     "# Retrieve the input layer and extract the size of width of the images (which is equal to the height)\n",
     "input_layer = model.get_layer(index=0)\n",
-    "input_size = input_layer.input_shape[0][1]"
+    "input_size = input_layer.input_shape[0][1]\n",
+    "print(input_size)"
    ]
   },
   {
@@ -80,15 +93,17 @@
    "outputs": [],
    "source": [
     "# Load the input and ground truth images \n",
-    "x_initial_test = plt.imread('test/303-INPUT.jpg')\n",
-    "y_initial_test = plt.imread('test/303-OUTPUT-GT.png')\n",
+    "x_initial_test = plt.imread('datasets/test/0_full_images/303-INPUT.jpg')\n",
+    "y_initial_test = plt.imread('datasets/test/0_full_images/303-OUTPUT-GT.png')\n",
     "\n",
     "dest_foldername = 'dataset_303'\n",
+    "\n",
+    "x_test_norm = normalize(x_initial_test)\n",
     "\n",
     "CROP_SIZE_W = 4000 \n",
     "CROP_SIZE_H = 4000\n",
     "\n",
-    "x_initial_test = center_crop(x_initial_test, (CROP_SIZE_H, CROP_SIZE_W))\n",
+    "x_test_norm = center_crop(x_test_norm, (CROP_SIZE_H, CROP_SIZE_W)).numpy()\n",
     "y_initial_test = center_crop(y_initial_test, (CROP_SIZE_H, CROP_SIZE_W))"
    ]
   },
@@ -101,7 +116,7 @@
    },
    "outputs": [],
    "source": [
-    "print(x_initial_test.shape)\n",
+    "print(x_test_norm.shape)\n",
     "print(y_initial_test.shape)"
    ]
   },
@@ -114,8 +129,8 @@
    "outputs": [],
    "source": [
     "# Create patches from the input and ground truth images\n",
-    "STEP = 128\n",
-    "input_patches = np.squeeze(patchify(x_initial_test, (input_size, input_size, 3), step=STEP))\n",
+    "STEP = 64\n",
+    "input_patches = np.squeeze(patchify(x_test_norm, (input_size, input_size, 3), step=STEP))\n",
     "ground_truth_patches = np.squeeze(patchify(y_initial_test, (input_size, input_size), step=STEP))\n",
     "print(input_patches.shape)"
    ]
@@ -131,6 +146,15 @@
    "source": [
     "predictions = np.squeeze(model.predict(np.reshape(input_patches, (-1, input_size, input_size, 3))))\n",
     "predictions = np.reshape(predictions, ground_truth_patches.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictions.shape"
    ]
   },
   {
@@ -152,7 +176,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "unified_predictions.shape"
+    "plt.imshow(unified_predictions[:, :, 0])"
    ]
   },
   {
@@ -161,7 +185,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = center_crop(x_initial_test, (unified_predictions.shape[:2])) / 255. #NOTE: Later, I must divide by 255 the training image, not here\n",
+    "x = center_crop(x_initial_test, (unified_predictions.shape[:2])) \n",
     "y = np.expand_dims(center_crop(y_initial_test, (unified_predictions.shape[:2])), axis=-1)"
    ]
   },
@@ -181,6 +205,13 @@
     "name = \"prediction_\" + model_name\n",
     "np.save(os.path.join(dest, name), x_and_y_and_predictions)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -191,9 +222,9 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "deepenv",
    "language": "python",
-   "name": "python3"
+   "name": "deepenv"
   },
   "language_info": {
    "codemirror_mode": {
@@ -205,7 +236,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.10.4"
   },
   "vscode": {
    "interpreter": {
